use gwt-test-utils + implement tests for LoginViewWidget using it