@@ -123,6 +123,7 @@
             <artifactId>spring-web</artifactId>
             <version>3.0.7.RELEASE</version>
         </dependency>
+
         <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
@@ -132,7 +133,13 @@
         <dependency>
             <groupId>org.easymock</groupId>
             <artifactId>easymock</artifactId>
-            <version>2.4</version>
+            <version>3.0</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>com.googlecode.gwt-test-utils</groupId>
+            <artifactId>gwt-test-utils</artifactId>
+            <version>0.43</version>
             <scope>test</scope>
         </dependency>
     </dependencies>
@@ -208,11 +215,7 @@
                 <artifactId>maven-surefire-plugin</artifactId>
                 <version>2.6</version>
                 <configuration>
-                    <excludes>
-                        <!-- exclude GWT integration tests -->
-                        <exclude>**/*GwtTest.java</exclude>
-                        <exclude>**/MostGwtTestSuite.java</exclude>
-                    </excludes>
+                    <argLine>-Xmx1024M -XX:MaxPermSize=128M</argLine>
                 </configuration>
             </plugin>
 
